fixed styling after presentation - mobile version photos now are more cropped like mockup - spacing of text in cards is closer like mockup - activities section now in line with eachother

--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ header a:hover {
   border-radius: 40px;
   padding: 5px;
   font-size: 20px;
-  height: 400px;
+  height: 390px;
   position: relative;
 }
 
@@ -231,10 +231,10 @@ header a:hover {
 }
 
 .card-content {
-  padding-left: 10px;
-  padding-bottom: 10px;
-  position: relative;
-  bottom: 60px;
+  padding-left: 20px;
+  position: absolute;
+  bottom: 30px;
+  line-height: 0.6;
 }
 
 [class^="cardrow-"] {
@@ -335,7 +335,7 @@ header a:hover {
 .activity-row1 img {
   object-fit: cover;
   width: 100%;
-  height: 920px;
+  height: 950px;
   border-radius: 40px 40px 0 0;
 }
 
@@ -469,6 +469,23 @@ header a:hover {
 @media screen and (max-width: 768px) {
   #accomodations {
     background-color: white;
+  }
+
+  .card img{
+    width: 100%;
+    height: 60%;
+  }
+
+  .card{
+    height: 340px;
+  }
+
+  .card-content{
+    bottom: 40px;
+  }
+
+  .popular_card img{
+    width: 40%;
   }
 
   .intro-section {
